--- a/style.css
+++ b/style.css
@@ -109,13 +109,14 @@ canvas{
 }
 #score{
     color: midnightblue;
-    width: 1000px;
+    width: 1200px;
     height: 200px;
     text-shadow: 2px 2px 5px deepskyblue;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
+    left: 0;
     margin: 0 auto;
     bottom: 0;
     display: flex;
